# nv-installer

./: .gitignore  AGENTS.md  ARCHITECTURE.md  CHANGELOG.md  LICENSE  Makefile  PATTERNS.md  README.md  nv-install  pyproject.toml  requirements.txt  start.md
.github/workflows/: ci.yml  integration-tests.yml  matrix-update.yml
docs/: CUDA_INSTALLATION.md  MANUAL_INSTALLATION.md
scripts/: update-matrix.py
src/nvidia_inst/: __init__.py  cli.py
src/nvidia_inst/cli/: __init__.py  __main__.py  commands.py  compatibility.py  display.py  driver_state.py  dryrun.py  installer.py  main.py  parser.py  simulate.py
src/nvidia_inst/distro/: __init__.py  apt.py  detector.py  dnf.py  factory.py  package_manager.py  packages.py  pacman.py  tools.py  versionlock.py  zypper.py
src/nvidia_inst/enterprise/: __init__.py  fleet.py  monitoring.py  security.py
src/nvidia_inst/gpu/: __init__.py  compatibility.py  detector.py  hybrid.py
src/nvidia_inst/gpu/matrix/: __init__.py  compatibility_data.json  data.py  manager.py
src/nvidia_inst/gui/: __init__.py  tkinter_gui.py  zenity_gui.py
src/nvidia_inst/installer/: __init__.py  cuda.py  driver.py  hybrid.py  offline.py  prerequisites.py  rollback.py  secureboot.py  uninstaller.py  validation.py  version_checker.py
src/nvidia_inst/utils/: logger.py  permissions.py  system.py
tests/: conftest.py  test_apt.py  test_apt_real.py  test_cli.py  test_cli_installer.py  test_cli_integration.py  test_cli_main.py  test_cli_real.py  test_cli_real.py.bak  test_cli_workflows_e2e.py  test_compatibility.py  test_compatibility_extended.py  test_cuda_e2e.py  test_cuda_installation.py  test_cuda_installer.py  test_display.py  test_distro.py  test_dnf.py  test_dnf_real.py  test_driver_installer.py  test_driver_state.py  test_driver_state_e2e.py  test_driver_state_table.py  test_dryrun.py  test_e2e_installation.py  test_error_handling.py  test_factory.py  test_gpu.py  test_hybrid.py  test_hybrid_installer.py  test_install_driver_order.py  test_installation_flow.py  test_installer.py  test_kmod_only.py  test_matrix.py  test_offline.py  test_offline_e2e.py  test_packages.py  test_pacman.py  test_pacman_real.py  (+17 more)
